plugins {
    id 'org.springframework.boot' version '2.6.3'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id "com.gorylenko.gradle-git-properties" version "2.4.0"  // Used by Sentry to match errors to specific git commit
    id "io.freefair.lombok" version "6.4.1"
    id 'java'
}

group = 'xyz.laane'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.3'
    implementation "org.flywaydb:flyway-core:8.5.0"
    implementation "org.flywaydb:flyway-mysql:8.5.0"

    implementation "org.jsoup:jsoup:1.14.3"

    implementation 'io.sentry:sentry-spring-boot-starter:5.6.1'
    implementation 'io.sentry:sentry-logback:5.6.1'
}

def springProfile = 'default'

bootRun {
    args = ["--spring.profiles.active=" + springProfile]
}
